--- a/resources/views/frontend/usuarios/edit.edge
+++ b/resources/views/frontend/usuarios/edit.edge
@@ -15,7 +15,7 @@
 
         <div class="label-edit">
           <label>Nome</label>
-          <input type="text" placeholder=" " value="{{ old('username', usuario.username) }}" name="username" required/>
+          <input type="text" placeholder=" " value="{{ old('username', usuario.username) }}" name="username" readonly/>
           @if(hasErrorFor('username')) 
             <span class= "mens-error"> {{ getErrorFor('username') }} </span>
           @endif
@@ -23,7 +23,7 @@
   
         <div class="label-edit">
           <label>E-mail</label>
-          <input type="email" placeholder=" " value="{{ old('email', usuario.email) }}" name="email" required/>
+          <input type="email" placeholder=" " value="{{ old('email', usuario.email) }}" name="email" readonly/>
           @if(hasErrorFor('email')) 
             <span class= "mens-error"> {{ getErrorFor('email') }} </span>
           @endif
