--- a/resources/views/frontend/ordensservicos/create-os.edge
+++ b/resources/views/frontend/ordensservicos/create-os.edge
@@ -5,17 +5,25 @@
 <div id="lista-cadastro-cliente">
   <h3>Nova Ordem de Serviço</h3>
 
-  <form action="/cliente/create" method="POST">
+  <form action="/os/store-step1" method="POST">
     {{ csrfField() }}
 
-  <div id="busca">
-  </div>  
+    <div id="busca">
+    </div>  
 
     <div class="label-float">
-      <input type="text" placeholder=" " name="cliente" value="{{ old('cliente', '') }}" required/>
+      <input type="text" placeholder=" " name="cliente_id" value="{{ clienteOS.id }}" readonly/>
+      <label>Cód. Cliente</label>
+      @if(hasErrorFor('cliente_id')) 
+        <span class= "mens-error"> {{ getErrorFor('cliente_id') }} </span>
+      @endif
+    </div>
+
+    <div class="label-float">
+      <input type="text" placeholder=" " name="cliente_nome" value="{{ clienteOS.nome }}" disabled/>
       <label>Cliente</label>
-      @if(hasErrorFor('cliente')) 
-        <span class= "mens-error"> {{ getErrorFor('cliente') }} </span>
+      @if(hasErrorFor('cliente_nome')) 
+        <span class= "mens-error"> {{ getErrorFor('cliente_nome') }} </span>
       @endif
     </div>
 
@@ -46,11 +54,9 @@
       @endif
     </div>
   
-    
-
     <div class="label-float">
       <input type="hidden" name="status" value="{{ old('status', '') }}" id="input-tipo-status" required/>
-      <label>Selecione um Status</label>
+      <label>Status</label>
       <select id="drop-lista-status" onchange="selecionaListaStatus()">
         <option value="" {{ old('status', '') == '' ? "selected" : '' }}>Selecione um Status</option>
         <option value="Em análise"{{ old('status', '') == 'Em análise' ? "selected" : '' }}>Em análise</option>
@@ -61,35 +67,11 @@
         <option value="Pronto para entrega"{{ old('status', '') == 'Pronto para entrega' ? "selected" : '' }}>Pronto para entrega</option>
         <option value="Entregue"{{ old('status', '') == 'Entregue' ? "selected" : '' }}>Entregue</option>
       </select>
-      @if(hasErrorFor('lista-produtos')) 
-        <span class= "mens-error"> {{ getErrorFor('lista-produtos') }} </span>
+      @if(hasErrorFor('status')) 
+        <span class= "mens-error"> {{ getErrorFor('status') }} </span>
       @endif
     </div>
   
-    <div class="label-float">
-      <input type="number" placeholder=" " name="valor_total_bruto" value="{{ old('valor_total_bruto', '') }}" required/>
-      <label>Valor total Bruto</label>
-      @if(hasErrorFor('valor_total_bruto')) 
-        <span class= "mens-error"> {{ getErrorFor('valor_total_bruto') }} </span>
-      @endif
-    </div>
-
-    <div class="label-float">
-      <input type="number" placeholder=" " name="desconto" value="{{ old('desconto', '') }}" required/>
-      <label>Desconto</label>
-      @if(hasErrorFor('desconto')) 
-        <span class= "mens-error"> {{ getErrorFor('desconto') }} </span>
-      @endif
-    </div>
-
-    <div class="label-float">
-      <input type="number" placeholder=" " name="valor_total_liquido" value="{{ old('valor_total_liquido', '') }}" required/>
-      <label>Valor total Bruto</label>
-      @if(hasErrorFor('valor_total_liquido')) 
-        <span class= "mens-error"> {{ getErrorFor('valor_total_liquido') }} </span>
-      @endif
-    </div>
-
     <div class="label-float">
       <input type="text" placeholder=" " name="obs_tecnico" value="{{ old('obs_tecnico', '') }}" required/>
       <label>Observações do Técnico</label>
@@ -98,40 +80,22 @@
       @endif
     </div>
 
-  
     <div class="label-float">
-      <input type="date" placeholder=" " name="data_entrega" value="{{ old('data_entrega', '') }}" required/>
-      <label>Data da Entrega</label>
-      @if(hasErrorFor('data_entrega')) 
-        <span class= "mens-error"> {{ getErrorFor('data_entrega') }} </span>
-      @endif
+
     </div>
+  
+    <div class="botoes">
+        <button type="cancel" 
+                onclick="window.location='/os';return false;" 
+                class="botao-cancelar">
+            Cancelar
+        </button>
 
-    <div class="label-float">
-      <input type="hidden" name="lista-pagamento" value="{{ old('forma-pagto', '') }}" id="input-pagto" required/>
-      <label>Selecione um Status</label>
-      <select id="drop-lista-pagto" onchange="selecionaListaPagto()">
-        <option value="" {{ old('forma-pagto', '') == '' ? "selected" : '' }}>Selecione um Status</option>
-        <option value="Dinheiro"{{ old('forma-pagto', '') == 'Dinheiro' ? "selected" : '' }}>Dinheiro</option>
-        <option value="Cartão de Crédito"{{ old('forma-pagto', '') == 'Cartão de Crédito' ? "selected" : '' }}>Cartão de Crédito</option>
-        <option value="Cartão de Débito"{{ old('forma-pagto', '') == 'Cartão de Débito' ? "selected" : '' }}>Cartão de Débito</option>
-        <option value="Pix"{{ old('forma-pagto', '') == 'Pix' ? "selected" : '' }}>Pix</option>
-      </select>
-      @if(hasErrorFor('forma-pagto')) 
-        <span class= "mens-error"> {{ getErrorFor('forma-pagto') }} </span>
-      @endif
-  </div>
-
-  <div class="botoes">
-    <button class="botao-cancelar">
-      Cancelar
-    </button>
-
-    <button class="botao-cadastrar">
-      Cadastrar
-    </button>
-  </div>
-
+        <button type="submit" class="botao-cadastrar">
+          Salvar
+        </button>
+    </div>
+  </form>  
 </div>
 
 @endsection
