--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -11,13 +11,13 @@
           <a id="cor" class="nav-link" href="/usuarios">Usuários</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="/produto">Produtos</a>
+          <a id="cor" class="nav-link" href="/produtos">Produtos</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="/clientes">Clientes</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="#">Relatórios</a>
+          <a id="cor" class="nav-link" href="">Relatórios [em breve]</a>
         </li>
         @endloggedIn
 
