--- a/resources/views/frontend/ordensservicos/create-produto.edge
+++ b/resources/views/frontend/ordensservicos/create-produto.edge
@@ -48,15 +48,19 @@
             <form action="/os/store-step3/" method="POST">
               {{ csrfField() }}
               <td><input type="text" placeholder="" name="valor_venda" value="{{ produto.valor_venda }}" readonly /></td>
-              <td><input type="number" placeholder="" name="quantidade" value="" min=1 step=1 required /></td>
+              <td><input type="number" placeholder="quantidade" name="quantidade" value="" min=1 step=1 required /></td>
               <td>
                 <input hidden type="number" placeholder="" name="ordem_servico_id" value="{{ ordem_servico_id }}"  />
                 <input hidden type="number" placeholder="" name="produto_id" value="{{ produto.id }}"  />
+                
                 <button type="submit"
                       onclick="return 
                       confirm('Gostaria de adicionar 
                       {{ produto.nome }} a uma nova Order de Serviço?')";>
-                  <span class="" ><b>+<b></span>
+                  <span class="material-icons">
+                    add_circle_outline
+                    </span>
+                    
                 </button>
               
               </td>
